# kana-jp

./: .gitignore  Cargo.toml  README.md
cs/: Form1.Designer.cs  Form1.cs  Program.cs  cs.csproj  cs.sln
cs/Properties/: AssemblyInfo.cs
src/: lib.rs  main.rs  map.rs  utils.rs
