[package]
name = "kana-jp"
version = "0.1.0"
edition = "2021"
authors = ["Arimura Sena <me@hotaru.icu>"]
description = "A Japanese kana converter library for Rust."
repository = "https://github.com/biyuehu/kana-jp"
readme = "README.md"
keywords = ["kana", "japanese", "romaji", "japan", "hiragana", "katakana"]
license = "GPL-3.0"

[dependencies]
