[package]
name = "kana-jp"
version = "0.1.0"
edition = "2021"
authors = ["Arimura Sena <me@hotaru.icu>"]
description = "A Japanese kana converter library for Rust."
repository = "https://github.com/biyuehu/kana-jp"
readme = "README.md"
keywords = ["japanese", "romaji", "hiragana", "katakana", "kanji"]
license = "GPL-3.0-only"
exclude = ["target/", "cs/"]

[dependencies]
winsafe = { version = "0.0.22", features = ['gui'] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
